# r2-hive

./: .gitignore  .gitleaks.toml  AGENTS.md  Caddyfile  Cargo.toml  DECISIONS.md  Dockerfile  FORKS.md  LICENSE-APACHE  LICENSE-MIT  README.md  RESUME-archive.md  RESUME.md  deploy.sh  install.sh
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  public-content-hygiene.yml
ci/: check-vendored-vectors.sh  public-hygiene.sh
crates/r2-hive-bin/: Cargo.toml  DESIGN.md  README.md  TEST-RIG.md
crates/r2-hive-bin/docs/: architecture.md  mgmt-api.md
crates/r2-hive-bin/examples/: gen_golden_compact_frame.rs  gen_host_api_vectors.rs  gen_plugin_web_vectors.rs  gen_usb_pair_vectors.rs  heartbeat_sync_sim.rs
crates/r2-hive-bin/packaging/: README.md
crates/r2-hive-bin/packaging/dbus/: org.reality2.Hive.service
crates/r2-hive-bin/packaging/defaults/: hive.toml
crates/r2-hive-bin/packaging/systemd/: r2-hive.service
crates/r2-hive-bin/src/: autoconfig.rs  config.rs  hive.rs  lib.rs  main.rs  platform.rs  router.rs  sync_host.rs  systemd.rs  transport_seam.rs  usb.rs  usb_hotplug.rs  usb_pair.rs  usb_serial.rs  web.rs  web_auth.rs
crates/r2-hive-bin/src/compat/: buffer.rs  handshake.rs  mod.rs  protocol.rs
crates/r2-hive-bin/src/mgmt/: api.rs  ensemble.rs  framing.rs  identity.rs  mod.rs  primitive.rs  socket.rs  state.rs  subscriptions.rs  transport_policy.rs  usb.rs  ws.rs
crates/r2-hive-bin/src/plugins/: dashboard.rs  mod.rs  word_codes.rs
crates/r2-hive-bin/static/: dashboard.html
crates/r2-hive-bin/tests/: ensemble_integration.rs  host_api_conformance.rs  mgmt_integration.rs  process_hygiene.rs  router_integration.rs  service_integration.rs  transport_integration.rs  usb_mgmt_integration.rs  vector_coverage.rs  web_auth_integration.rs  web_plugin_integration.rs  web_plugin_load.rs
crates/r2-hive-bin/tests/vectors/: _SYNC.md  r2-host-api-vectors.json  r2-plugin-web-vectors.json  r2-usb-pair-vectors.json  r2-usb-vectors.json
crates/r2-hive-core/: Cargo.toml
crates/r2-hive-core/src/: ensemble.rs  identity.rs  lib.rs  ota.rs  platform.rs  record_store.rs  sync_host.rs  transport_seam.rs
crates/r2-hive-wasm/: Cargo.toml
crates/r2-hive-wasm/carrier-bridge/: .gitignore  README.md  r2-carrier-bridge.py  router.js  run-bridge.sh
crates/r2-hive-wasm/src/: lib.rs
crates/r2-hive-wasm/ws-mesh/: .gitignore  README.md  bridge-deliver-gate.js  bridge-flood-control.js  bridge-neighbour-probe.js  bridge-test-mesh.js  gateway.js  hive-bridge.js  hive-udp.js  hive-ws-browser.d.ts  hive-ws-browser.js  hive-ws.js  test-mesh.js  udp-test-mesh.js
crates/r2-wasm-host/: Cargo.toml
crates/r2-wasm-host/examples/: interop.rs
crates/r2-wasm-host/src/: lib.rs
crates/r2-wasm-host/tests/: conformance.rs  mechanics_spike.rs
crates/r2hive-cli/: Cargo.toml  README.md
crates/r2hive-cli/src/: main.rs
docs/: BENCH-BOARD-FACTS.md  CONFORMANCE.md  HIVE-ARCHITECTURE-CANON.md  HIVE-FW-INTEGRATION-PATTERN.md  R2-RUNTIME-EDGE-BRIDGE-STANDBY-CANDIDATE.md  SX1262-SETRXDUTYCYCLE-DIFF-PROPOSAL.md  WASM-HOST-LINKABLE-BASE-PREP.md  WASM-PROJECTION-12.4.3.1-CANDIDATE.md  WASM-PROJECTION-12.4.3.2-CANDIDATE.md  WS-TRANSPORT-BINDING.md  XIAO-BRIDGE-STANDBY-PLAN.md  dfr1195-ble-cargo.patch  dfr1195-default-ensemble-proposal.md  dfr1195-first-light-findings.md  dfr1195-firstlight.patch  dfr1195-ota-partitions.md  dfr1195-ota-receiver-plan.md  dfr1195-partitions-8mb.csv  dfr1195-partitions.csv  dfr1195-proof-surface-learnings.md  dfr1195-s3-validation.patch  esp32-hive-firmware-architecture.md  espnow-mesh-interop.md  field-firmware-role-prep.md  grow-strong-ideas.md  hardware-tn-test-critical-path.md  hw-root-matrix.md  lora-heartbeat-sync-design.md  lora-mesh-redesign-scope.md  phase3-tn-refutation-batch3.md  r2-24-l2cap-implementation-plan.md  r2-24-negotiation-engine-interface.md  r2-ble-data-mesh-plan.md  r2-discovery-consumer-requirements.md  r2-espnow-mesh-verdict.md  r2-hw-display-descriptor-refinements.md  r2-hw-led-capability-proposal.md  r2-network-negotiation-24.md  r2-per-carrier-builds.md  r2-usb-wire-extract-for-specs.md  (+1 more)
docs/dev/: CRATES.md
docs/field-results/: HBSYNC-02-field-lora.json  HBSYNC-02-field-wifi.json  LORA-FIRSTLIGHT.json  TN-L0-IT-HBSYNC-WIFI.json  TN-L1-IT-BL-103.json  TN-L1-IT-BL-200.json  TN-L2-IT-BL-100.json  mariko-triplet-metal-0627.md
docs/field-results/fr4-2arm-0623/: TN-FR-1-REL.json
docs/field-results/fr4-lifecycle-0623/: TN-FR-4.json  TN-L2-XT-BL-001.json
docs/field-results/lora-fr1-0623/: RUNBOOK.md  TN-FR-1.json  TN-FR-1.json.partial
docs/field-results/lora-fr2-0623/: TN-FR-2.json
docs/ledger/: xiaobridge-pairing-framing.md
docs/proposals/: HEARTBEAT-SIMPLIFICATION.md  ota-secure-receiver-device-requirements.md
docs/r2-dataplane/: Cargo.toml  README.md  lib.rs
scripts/: bump-core.sh  setup-hooks.sh
