[workspace]
resolver = "2"
members = [
    "crates/r2-hive-bin",
    "crates/r2hive-cli",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reality2-ai/r2-hive"

# r2-hive depends on the protocol crates that live in the sibling
# `r2-core` repository. During development those are referenced via
# path; releases pin to published crates.io versions instead.
#
# When migrating to a published-version workflow, replace the path
# entries below with `version = "x.y"` lines and drop the path key.
