[workspace]
resolver = "2"
members = [
    "crates/r2-hive-core",
    "crates/r2-hive-bin",
    "crates/r2hive-cli",
]
# r2-hive-wasm is the wasm/browser platform layer (std + wasm-bindgen, cdylib).
# Excluded from the default workspace so the host build/CI never compiles it for
# a non-wasm target. Build explicitly: cargo build -p r2-hive-wasm --target
# wasm32-unknown-unknown --release  (see crates/r2-hive-wasm/src/lib.rs).
exclude = [
    "crates/r2-hive-wasm",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reality2-ai/r2-hive"

# r2-hive depends on the protocol crates that live in the sibling
# `r2-core` repository. During development those are referenced via
# path; releases pin to published crates.io versions instead.
#
# When migrating to a published-version workflow, replace the path
# entries below with `version = "x.y"` lines and drop the path key.
