[package]
name = "r2-hive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "R2 Hive — the R2 software stack on general-purpose hosts (see r2-specifications R2-HIVE)"
repository = "https://github.com/reality2-ai/r2-hive"

[[bin]]
name = "r2-hive"
path = "src/main.rs"

[lib]
name = "r2_hive"
path = "src/lib.rs"

[dependencies]
# Platform-agnostic hive core (no_std + alloc) — the shared one-codebase logic.
r2-hive-core = { path = "../r2-hive-core" }
r2-wire = { path = "../../../r2-core/crates/r2-wire", default-features = false, features = ["alloc"] }
r2-cbor = { path = "../../../r2-core/crates/r2-cbor" }
r2-fnv  = { path = "../../../r2-core/crates/r2-fnv" }
r2-route = { path = "../../../r2-core/crates/r2-route" }
# §7.5.4 deliver-gate: GroupHmac (HK-keyed HMAC-SHA256) for inbound verify (R2-TRUST §7.5.4).
r2-trust = { path = "../../../r2-core/crates/r2-trust" }
r2-transport = { path = "../../../r2-core/crates/r2-transport" }
r2-discovery = { path = "../../../r2-core/crates/r2-discovery", features = ["websocket", "mdns", "udp-lan"] }
r2-engine = { path = "../../../r2-core/crates/r2-engine" }
r2-def = { path = "../../../r2-core/crates/r2-def" }
r2-ensemble = { path = "../../../r2-core/crates/r2-ensemble" }
r2-dispatch = { path = "../../../r2-core/crates/r2-dispatch" }

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ed25519-dalek = { version = "=2.1.1", default-features = false, features = ["std"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
async-trait = "0.1"

# Identity custody (R2-HIVE §3) and web-plugin auth (R2-PLUGIN §13.5)
hkdf      = "0.12"
sha2      = "0.10"
hmac      = "0.12"
base64    = "0.22"
getrandom = "0.2"
zeroize   = { version = "1", features = ["derive"] }

# CDC-ACM serial I/O for R2-USB v2 (Phase USB-3a). Linux only — the
# `usb_serial` module is `cfg(target_os = "linux")` because termios
# layout is platform-specific.
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
default = ["cloud"]
cloud = []
lan = []

# §2.2B build-time transport composition — composer BRIDGE ruling (ae78be3): the device-binary
# FORWARD-MAPS core's transport-* contract (r2-transport 5f7a0b2) onto PLATFORM-SPECIFIC bearers.
# On the Linux host tier those bearers are r2-discovery bindings; the ESP board tier maps the same
# transport-* names onto esp-hal radios (board-side, post-#49). No core rename can unify them
# (different HALs) — core publishes the transport-*→bearer correspondence table for anti-drift.
# transport-wifi/mesh/usb are host-tier MARKERS for now (no distinct Linux binding: SoftAP-UDP ≈
# transport-udp kind=1; ESP-NOW mesh = board-side; R2-USB framer = future).
transport-internet = ["r2-discovery/websocket"]   # WS relay/cloud bearer (Linux base bearer, always-on — see NOTE)
transport-udp      = ["r2-discovery/udp-lan"]      # UDP LAN bearer (runtime --lan)
transport-ble      = ["r2-discovery/ble", "dep:bluer"] # BLE L2CAP CoC bearer
transport-lora     = ["r2-discovery/lora"]         # LoRa via arduino-router IPC
transport-wifi     = []                             # marker (SoftAP-UDP ≈ transport-udp kind=1)
transport-mesh     = []                             # marker (ESP-NOW = board-side esp-hal)
transport-usb      = []                             # marker (R2-USB framer, future)

# Legacy aliases — keep existing `--features ble/lora` invocations + CI working. Forward to the
# contract names so the cfg(feature="transport-*") gates fire from either the legacy or new name.
ble = ["transport-ble"]
lora = ["transport-lora"]
# Enable the libsecret/Keychain/wincred identity store via the `keyring`
# crate. Off by default because Linux libsecret needs a running
# gnome-keyring-daemon (or KWallet bridge) — operators opt in per
# distro packaging.
keyring = ["dep:keyring"]
# Linux-only: sd_notify(READY=1) on bind, periodic WATCHDOG=1 pings.
# Distros packaging an `r2-hive.service` systemd unit should enable
# this so the unit can use Type=notify + WatchdogSec=.
systemd = ["dep:sd-notify"]

[dependencies.bluer]
version = "0.17"
features = ["full"]
optional = true

[dependencies.keyring]
version = "3"
optional = true
# Default features get sync-secret-service on Linux (libsecret /
# gnome-keyring), Keychain on macOS, Credential Manager on Windows.
# Operators who want kernel keyutils (no DBus) can add `linux-native`.

[dependencies.sd-notify]
version = "0.4"
optional = true
