[package]
name = "r2-hive-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "r2-hive platform-agnostic core (no_std + alloc) — the one-codebase hive logic shared across the Linux/cloud, ESP32-S3, Uno-Q and wasm platform layers (R2-HIVE north-star). Built on r2-core's no_std crates; holds no platform/runtime deps (no tokio/axum/std-net)."
repository.workspace = true

[lib]
name = "r2_hive_core"
path = "src/lib.rs"

[dependencies]
# r2-core no_std/alloc protocol crates (path during dev; see workspace note).
r2-wire = { path = "../../../r2-core/crates/r2-wire", default-features = false, features = ["alloc"] }
r2-fnv = { path = "../../../r2-core/crates/r2-fnv" }
r2-route = { path = "../../../r2-core/crates/r2-route" }
# Boxes async-trait futures for the transport seam (no_std-compatible).
async-trait = "0.1"
