[package]
name = "r2-hive-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "r2-hive platform-agnostic core (no_std + alloc) — the one-codebase hive logic shared across the Linux/cloud, ESP32-S3, Uno-Q and wasm platform layers (R2-HIVE north-star). Built on r2-core's no_std crates; holds no platform/runtime deps (no tokio/axum/std-net)."
repository.workspace = true

[lib]
name = "r2_hive_core"
path = "src/lib.rs"

[dependencies]
# r2-core no_std/alloc protocol crates (path during dev; see workspace note).
r2-wire = { workspace = true, features = ["alloc"] }
r2-fnv = { workspace = true }
r2-route = { workspace = true }
# Sentant/plugin runtime (EventBus) — the basic ensemble the hive runs on EVERY
# platform (wasm/Linux/ESP32). no_std + alloc, so it stays in the shared core.
r2-engine = { workspace = true, features = ["alloc"] }
# R2-UPDATE OTA verify (verify_header/PayloadVerifier/Ed25519, 4-gate/anti-rollback)
# — the OTA plugin reuses these VERBATIM so the OTA flow is the real flow on every
# platform; bearer (CoC / virtual-mesh / UDP) is the only thing that varies.
r2-update = { workspace = true }
# Boxes async-trait futures for the transport seam (no_std-compatible).
async-trait = "0.1"
# Identity crypto (no_std): HKDF-SHA256 derivation + Ed25519 keypair, secret
# zeroization. All built default-features=false so the core stays no_std.
ed25519-dalek = { version = "=2.1.1", default-features = false }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }
