[package]
name = "r2-hive-wasm"
version = "0.4.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "wasm platform layer for r2-hive — exposes the REAL current-TN sync routing core (r2-hive-core route_inbound_sync over r2-route/r2-wire) to a browser/JS bench sim. R2-HIVE north-star wasm tier; one-codebase hive logic, thin per-platform host. Workspace-EXCLUDED (wasm-only, std/wasm-bindgen) so host CI is untouched."
repository = "https://github.com/reality2-ai/r2-hive"

[lib]
name = "r2_hive_wasm"
# cdylib = the .wasm artifact (wasm-bindgen glue); rlib = host-testable.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Same current-TN crates the rest of the hive uses (path during dev). The wasm
# tier runs the IDENTICAL routing core as Linux/ESP32 — no fork.
r2-hive-core = { path = "../r2-hive-core" }
r2-route = { path = "../../../r2-core/crates/r2-route" }
# EventBus = the basic-ensemble runtime (HB sentant now; OTA plugin+sentant next).
r2-engine = { path = "../../../r2-core/crates/r2-engine", default-features = false, features = ["alloc"] }
# R2-UPDATE OTA verify (verify_header/PayloadVerifier/Ed25519, 4-gate/anti-rollback)
# — pure no_std verify-only (no getrandom trap, core-confirmed wasm32-clean). The
# OTA plugin reuses these so the wasm OTA FLOW is the REAL flow (refutable).
r2-update = { path = "../../../r2-core/crates/r2-update" }
# In-wasm R2-WIRE ENCODE (build_heartbeat/build_frame) so each sim node originates
# its OWN frames — same encoder the firmware uses. no_std/alloc, wasm-clean.
r2-wire = { path = "../../../r2-core/crates/r2-wire", default-features = false, features = ["alloc"] }
wasm-bindgen = "0.2"

[dev-dependencies]
# Host-only OTA e2e test: mint a signed package (sign-side; the wasm runtime is
# verify-only). default-features=false keeps it off getrandom for from_bytes/sign.
ed25519-dalek = { version = "=2.1.1", default-features = false }
sha2 = { version = "0.10", default-features = false }

[profile.release]
# Small wasm: the sim ships this to a browser.
opt-level = "s"
lto = true
