[package]
name = "r2hive-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "r2hive — CLI for the r2-hive local management API (see r2-specifications R2-HIVE §10)"
repository = "https://github.com/reality2-ai/r2-hive"

[[bin]]
name = "r2hive"
path = "src/main.rs"

[dependencies]
r2-hive = { path = "../r2-hive-bin" }
r2-wire = { path = "../../../r2-core/crates/r2-wire" }
r2-cbor = { path = "../../../r2-core/crates/r2-cbor" }
r2-fnv  = { path = "../../../r2-core/crates/r2-fnv" }

tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util"] }
clap  = { version = "4", features = ["derive"] }
rand  = "0.8"
